--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 For documentation and instructions for building this software,
 see <http://www.live555.com/liveMedia/>
+
+forked from https://github.com/filippobrizzi/raw_rgb_straming
+
